syntax = "proto3";

package retrochain.tokenfactory.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "retrochain/x/tokenfactory/types";

message GenesisState {
  repeated DenomAuthority denom_authorities = 1 [(gogoproto.nullable) = false];
  repeated CreatorDenom creator_denoms = 2 [(gogoproto.nullable) = false];
}

message DenomAuthority {
  string denom = 1;
  string admin = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message CreatorDenom {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string denom = 2;
}
